--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.green-light_green.min.css" />
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css" />
     <script defer src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <!-- <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
-        integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script> -->
+    <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
+        integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
     <script defer src="js/main.js"></script>
 </head>
 
 <body>
-    <div class="container">
-        <div class="course-select title course-selection">
+    <div class="mdl-layout mdl-js-layout container">
+        <div class="course-selection course-selection-title title">
             <h1>
                 <!-- header for course cards list -->
                 Select a Course
             </h1>
         </div>
         <div class="course-card-container course-selection">
-            <!-- cards are generated here -->
+            <!-- cards are generated here when they're retreived from API-->
         </div>
 
-
-        <div class="player-creation title">
+        <div class="player-creation player-creation-title title">
             <h1>
                 <!-- header for player creation list -->
                 Enter Player Names
@@ -38,19 +37,21 @@
         <div class="player-creation player-creation-container">
             <form action="#">
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <input class="mdl-textfield__input" type="text" id="player-text-field">
-                    <label class="mdl-textfield__label" for="player-text-field">Text...</label>
+                    <input onkeyup="checkKey(this, 'player-textfield')" class="mdl-textfield__input" type="text"
+                        id="player-textfield" />
+                    <label class="mdl-textfield__label" for="player-textfield">Name...</label>
                 </div>
+                <button onclick='addPlayer()' class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored">
+                    <i class="material-icons">add</i>
+                </button>
+
             </form>
             <!-- player creation list -->
             <ul class="player-list mdl-list">
-                <li class="mdl-list__item">
-                    <span class="mdl-list__item-primary-content">
 
-                    </span>
-                </li>
             </ul>
         </div>
+
     </div>
 </body>
 
