added player delete, more animations

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                         id="player-textfield" />
                     <label class="mdl-textfield__label" for="player-textfield">Name...</label>
                 </div>
-                <button onclick='addPlayer()' class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored">
+                <button onclick='addPlayer()'
+                    class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect mdl-button--colored">
                     <i class="material-icons">add</i>
                 </button>
 
@@ -50,6 +51,7 @@
             <ul class="player-list mdl-list">
 
             </ul>
+            <h3 id='playerTotal'>0/4 Players</h3>
         </div>
 
     </div>
