--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_green-green.min.css" />
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link rel="stylesheet" href="style/style.css" />
     <script defer src="https://code.jquery.com/jquery-3.3.1.js"
@@ -34,13 +36,13 @@
                 </div>-->
 
 
-        <div class="course-selection course-selection-title title">
-            <h1>
-                <!-- header for course cards list -->
-                Select a Course
-            </h1>
-        </div>
-        <div class="course-card-container course-selection">
+                <div class="course-selection course-selection-title title">
+                    <h1>
+                        <!-- header for course cards list -->
+                        Select a Course
+                    </h1>
+                </div>
+                <div class="course-card-container course-selection">
             <!-- cards are generated here when they're retreived from API-->
         </div>
 
@@ -70,16 +72,57 @@
 
             </ul>
             <h3 id='playerTotal'>0/4 Players</h3>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
+            <button onclick="showTable()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
                 GO!
             </button>
         </div>
 
 
         <!-- golf score card -->
+        <div class="score-card score-card-title title">
+            <h1>
+                Thanksgiving Point
+            </h1>
+        </div>
         <div class="score-card">
-    
-    </div>
+            <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+                <thead>
+                    <tr>
+                        <th>Hole</th>
+                        <th>Yardage</th>
+                        <th>Handicap</th>
+                        <th>PAR</th>
+                        <th>Kaleb's Score</th>
+                        <th>Play's Score</th>
+                        <th>PDARr's Score</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>405</td>
+                        <td>2</td>
+                        <td>4</td>
+                        <td>3</td>
+                        <td>2</td>
+                        <td>5</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr><th>totals</th></tr>
+                    <tr>
+                        <th id="hole-total">18</th>
+                        <th id="yardage-total">230</th>
+                        <th id="handicap-total">--</th>
+                        <th id="par-total">36</th>
+                        <th>3</th>
+                        <th>2</th>
+                        <th>5</th>
+
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
 
     </div>
 
