made table look better

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 Thanksgiving Point
             </h1>
         </div>
-        <div class="score-card score-card-table">
-            <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+        <div class="score-card score-card-table mdl-shadow--24dp">
+            <table class="mdl-data-table mdl-js-data-table">
                 <thead>
                     <tr class="table-head">
                         <th class="mdl-data-table__cell--non-numeric">Hole</th>
