--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="node_modules/dialog-polyfill/dist/dialog-polyfill.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_green-green.min.css" />
     <!-- <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet"> -->
     <!-- <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script> -->
+    <script defer src="node_modules/dialog-polyfill/dist/dialog-polyfill.js"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link rel="stylesheet" href="style/style.css" />
     <script defer src="https://code.jquery.com/jquery-3.3.1.js"
@@ -67,15 +69,16 @@
         <!-- golf score card -->
         <div class="score-card score-card-title title">
             <h1>
-                Thanksgiving Point
+                
             </h1>
         </div>
         <div class="score-card tee-select">
             <!-- modal for changing course selection at the table -->
             <button id="change-course-dialog" type="button" class="mdl-button">Change Course</button>
             <dialog class="mdl-dialog">
-                <h4 class="mdl-dialog__title">Select a Course</h4>
+                <h4 class="mdl-dialog__title">New Course?</h4>
                 <div class="mdl-dialog__content">
+                    <!-- courses are appended here -->
 
                 </div>
                 <div class="mdl-dialog__actions">
